--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
+.app {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #545454;
+  color: white;
   min-height: 100vh;
+}
+
+.link {
+  color: white;
+  font-size: 20px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
+  background-color: #353535;
+  color: white;
+  border-bottom: 2px solid white;
+}
+
+.nav-links {
+  width: 40%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.title {
+  font-size: 50px;
+}
+
+.img {
+  border: 1px solid white;
+}
+
+.programImage {
+  width: 75%;
+  border: 2px solid white;
+}
+
+.longinusImage {
+  width: 40%;
+  border: 2px solid white;
+}
+
+.homeDivider {
+  border-top: 5px dotted #161616;
+  padding: 30px;
+}
+
+.homeBottom {
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.downloadsButton {
+  background-color: #353535;
+  color: white;
+  width: 400px;
+  height: 200px;
+  font-size: 40px;
+  border: 2px solid gray;
+}
+
+.downloadLink {
+  color: orange;
+  font-size: 20px;
+}
+
+.pixelImage {
+  image-rendering: optimizeSpeed;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -o-crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor;
+  image-rendering: pixelated;
+}
+
+.featureList {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  align-items: flex-start;
   color: white;
+  font-size: 20px;
+  text-align: left;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
